--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,21 @@ project(MiddlewareTest)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Get YAML CPP Library
+include(FetchContent)
+FetchContent_Declare(
+  yaml-cpp
+  GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
+  GIT_TAG 0.8.0 # Can be a tag (yaml-cpp-x.x.x), a commit hash, or a branch name (master)
+)
+FetchContent_MakeAvailable(yaml-cpp)
+
 # Create the mw library
-add_library(mmw STATIC ${CMAKE_SOURCE_DIR}/src/MMW.cpp)
+add_library(mmw STATIC ${CMAKE_SOURCE_DIR}/src/MMW.cpp ${CMAKE_SOURCE_DIR}/src/ConfigFileParser.cpp)
+target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp)
 
 # Library includes
-target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/)
+target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/ ${CMAKE_SOURCE_DIR}/includes/)
 
 # Add executables
 add_executable(broker ${CMAKE_SOURCE_DIR}/broker/Broker.cpp)
