--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,23 +14,41 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(yaml-cpp)
 
+# Get JSON library
+include(FetchContent)
+
+FetchContent_Declare(
+  json
+  GIT_REPOSITORY https://github.com/nlohmann/json.git
+  GIT_TAG v3.12.0
+)
+FetchContent_MakeAvailable(json)
+
 # Create the mw library
-add_library(mmw STATIC ${CMAKE_SOURCE_DIR}/src/MMW.cpp ${CMAKE_SOURCE_DIR}/src/ConfigFileParser.cpp)
-target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp)
+add_library(
+    mmw
+    STATIC
+    ${CMAKE_SOURCE_DIR}/src/MMW.cpp
+    ${CMAKE_SOURCE_DIR}/src/ConfigFileParser.cpp
+    ${CMAKE_SOURCE_DIR}/src/serialization/JsonSerializer.cpp
+)
+
+target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json)
 
 # Library includes
 target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/ ${CMAKE_SOURCE_DIR}/includes/)
 
 # Add executables
-add_executable(broker ${CMAKE_SOURCE_DIR}/broker/Broker.cpp)
+add_executable(broker ${CMAKE_SOURCE_DIR}/broker/Broker.cpp ${CMAKE_SOURCE_DIR}/src/serialization/JsonSerializer.cpp)
 add_executable(publish ${CMAKE_SOURCE_DIR}/app/Publish.cpp)
 add_executable(subscribe ${CMAKE_SOURCE_DIR}/app/Subscribe.cpp)
 
 # Application includes
 target_include_directories(publish PRIVATE ${CMAKE_SOURCE_DIR}/)
 target_include_directories(subscribe PRIVATE ${CMAKE_SOURCE_DIR}/)
+target_include_directories(broker PRIVATE ${CMAKE_SOURCE_DIR}/includes/)
 
 # Link
-target_link_libraries(broker pthread)
+target_link_libraries(broker nlohmann_json::nlohmann_json pthread)
 target_link_libraries(publish PRIVATE mmw pthread)
 target_link_libraries(subscribe PRIVATE mmw pthread)
