--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,13 +42,21 @@ target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/ ${CMAKE_SOURCE_DIR}/
 add_executable(broker ${CMAKE_SOURCE_DIR}/broker/Broker.cpp ${CMAKE_SOURCE_DIR}/src/serialization/JsonSerializer.cpp)
 add_executable(publish ${CMAKE_SOURCE_DIR}/app/Publish.cpp)
 add_executable(subscribe ${CMAKE_SOURCE_DIR}/app/Subscribe.cpp)
+add_executable(publish_c ${CMAKE_SOURCE_DIR}/app/Publish.c)
+add_executable(subscribe_c ${CMAKE_SOURCE_DIR}/app/Subscribe.c)
 
 # Application includes
 target_include_directories(publish PRIVATE ${CMAKE_SOURCE_DIR}/)
 target_include_directories(subscribe PRIVATE ${CMAKE_SOURCE_DIR}/)
 target_include_directories(broker PRIVATE ${CMAKE_SOURCE_DIR}/includes/)
+target_include_directories(publish_c PRIVATE ${CMAKE_SOURCE_DIR}/)
+target_include_directories(subscribe_c PRIVATE ${CMAKE_SOURCE_DIR}/)
 
 # Link
 target_link_libraries(broker nlohmann_json::nlohmann_json pthread)
 target_link_libraries(publish PRIVATE mmw pthread)
 target_link_libraries(subscribe PRIVATE mmw pthread)
+target_link_libraries(publish_c PRIVATE mmw pthread)
+target_link_libraries(subscribe_c PRIVATE mmw pthread)
+
+
