--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,15 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(json)
 
+# Get SPD Log Library
+include(FetchContent)
+FetchContent_Declare(
+  spdlog
+  GIT_REPOSITORY https://github.com/gabime/spdlog.git
+  GIT_TAG v1.14.1
+)
+FetchContent_MakeAvailable(spdlog)
+
 # Create the mw library
 add_library(
     mmw
@@ -33,7 +42,7 @@ add_library(
     ${CMAKE_SOURCE_DIR}/src/serialization/JsonSerializer.cpp
 )
 
-target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json)
+target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only)
 
 # Library includes
 target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/ ${CMAKE_SOURCE_DIR}/includes/)
@@ -53,7 +62,7 @@ target_include_directories(publish_c PRIVATE ${CMAKE_SOURCE_DIR}/)
 target_include_directories(subscribe_c PRIVATE ${CMAKE_SOURCE_DIR}/)
 
 # Link
-target_link_libraries(broker nlohmann_json::nlohmann_json pthread)
+target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only)
 target_link_libraries(publish PRIVATE mmw pthread)
 target_link_libraries(subscribe PRIVATE mmw pthread)
 target_link_libraries(publish_c PRIVATE mmw pthread)
