--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
+version: "3.3"
+
 services:
   mmw-broker:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: mmw-broker
+    network_mode: "host"
     ports:
       - "5000:5000"   # Expose the broker port
     restart: unless-stopped
