:sparkles: add windows support, broke linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,9 +42,10 @@ add_library(
     ${CMAKE_SOURCE_DIR}/src/MMW.cpp
     ${CMAKE_SOURCE_DIR}/src/ConfigFileParser.cpp
     ${CMAKE_SOURCE_DIR}/src/serialization/JsonSerializer.cpp
+    ${CMAKE_SOURCE_DIR}/src/network/SocketAbstraction.cpp
 )
 
-target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only)
+target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only ws2_32)
 
 # Library includes
 target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/ ${CMAKE_SOURCE_DIR}/includes/)
@@ -68,7 +69,7 @@ target_include_directories(publish_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
 target_include_directories(subscribe_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
 
 # Link
-target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only)
+target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only ws2_32)
 target_link_libraries(publish PRIVATE mmw pthread)
 target_link_libraries(subscribe PRIVATE mmw pthread)
 target_link_libraries(publish_c PRIVATE mmw pthread)
