:wrench: only link windows libs on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,12 @@ add_library(
     ${CMAKE_SOURCE_DIR}/src/network/SocketAbstraction.cpp
 )
 
-target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only ws2_32)
+# Link Libraries, only link ws2_32 if we're on Windows
+if(WIN32)
+  target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only ws2_32)
+else(WIN32)
+  target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only)
+endif(WIN32)
 
 # Library includes
 target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/ ${CMAKE_SOURCE_DIR}/includes/)
@@ -68,8 +73,12 @@ target_include_directories(subscribe_c PRIVATE ${CMAKE_SOURCE_DIR}/)
 target_include_directories(publish_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
 target_include_directories(subscribe_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
 
-# Link
-target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only ws2_32)
+# Link Libraries, only link ws2_32 if we're on Windows
+if(WIN32)
+  target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only ws2_32)
+else(WIN32)
+  target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only)
+endif(WIN32)
 target_link_libraries(publish PRIVATE mmw pthread)
 target_link_libraries(subscribe PRIVATE mmw pthread)
 target_link_libraries(publish_c PRIVATE mmw pthread)
