--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,35 @@
-name: Build and Test
-
-on:
-  push:
-    branches: [ "**" ]
-  pull_request:
-    branches: [ "**" ]
-
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y cmake g++ make
-
-      # - name: Configure project
-      #   run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
-
+      - uses: actions/checkout@v3
       - name: Build project
-        # run: cmake --build build -- -j$(nproc)
         run: |
-          mkdir -p build/
-          cd build/
+          mkdir build
+          cd build
           cmake ../
           make
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: mmw-build
+          path: build/
 
-      - name: Run middleware smoke test
-        working-directory: build
+  smoke-test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: mmw-build
+          path: build/
+      - name: Run smoke tests
         run: |
-          cd build/
-          ./subscriber &  
+          cd build
+          ./broker &
+          ./subscriber &
           SUB_PID=$!
           sleep 1
           ./publisher
