--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,13 +33,16 @@ jobs:
         with:
           name: mmw-build
           path: build/
+      - name: Make binaries executable
+        run: chmod +x build/broker build/subscriber build/publisher
       - name: Run smoke tests
         run: |
           cd build
           ./broker &
+          BROKER_PID=$!
           ./subscriber &
           SUB_PID=$!
           sleep 1
           ./publisher
           sleep 3
-          kill $SUB_PID || true
+          kill $SUB_PID $BROKER_PID || true
