:construction_worker: more debug

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
         run: |
           pwd
           ls
+          cd build/
+          pwd
+          ls
           chmod +x build/broker build/subscriber build/publisher
       - name: Run smoke tests
         run: |
