--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,12 @@ jobs:
           cd build
           cmake ../
           make
+          cd ..
 
       - name: Package Python binding (wheel)
         run: |
           python3 -m pip install --upgrade build
-          python3 -m build
+          python3 -m build .
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -84,7 +85,7 @@ jobs:
       - name: Install wheel
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install --force-reinstall build/python/dist/mmw_python-0.1.0-cp312-cp312-linux_x86_64.whl
+          python3 -m pip install --force-reinstall build/dist/mmw_python-0.1.0-cp312-cp312-linux_x86_64.whl
 
       - name: Run Python API test
         run: |
