:construction_worker: fix again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: mmw-build
-          path: build/
+          path: .
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -85,7 +85,7 @@ jobs:
       - name: Install wheel
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install --force-reinstall build/dist/mmw_python-0.1.0-cp312-cp312-linux_x86_64.whl
+          python3 -m pip install --force-reinstall dist/mmw_python-0.1.0-cp312-cp312-linux_x86_64.whl
 
       - name: Run Python API test
         run: |
