--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,3 +46,22 @@ jobs:
           ./publish
           sleep 3
           kill $SUB_PID $BROKER_PID || true
+
+  python-build:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Python build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-pip python3-venv
+          python3 -m pip install --upgrade build
+      - name: Build Python binding wheel
+        run: |
+          python3 -m build .
+      - name: Upload Python wheel
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-wheel
+          path: dist/
