--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,31 +67,26 @@ jobs:
           path: dist/
 
   python-test:
-    runs-on: ubuntu-latest
-    needs: python-build
-    steps:
-      - uses: actions/checkout@v3
+  runs-on: ubuntu-latest
+  needs: python-build
+  steps:
+    - uses: actions/checkout@v3
 
-      - name: Download Python wheel
-        uses: actions/download-artifact@v4
-        with:
-          name: python-wheel
-          path: dist/
+    - name: Install Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.12
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.12
+    - name: Install wheel from dist
+      run: |
+        python3 -m pip install --upgrade pip
+        python3 -m pip install dist/mmw_python-0.1.0-py3-none-any.whl
 
-      - name: Install wheel
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install --force-reinstall dist/mmw_python-0.1.0-py3-none-any.whl
-
-      - name: Test Python binding
-        run: |
-          python3 -c "
-          import mmw_python as mmw
-          print('Imported mmw_python successfully')
-          print('Available functions:', dir(mmw))
+    - name: Verify Python binding
+      run: |
+        python3 -c "
+          import mmw_python
+          print('Python binding imported successfully')
+          print('Available functions:', dir(mmw_python))
           "
+
