:construction_worker: won't work

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,11 +85,9 @@ jobs:
 
       - name: Install wheel from dist
         run: |
-          pwd
-          ls
-          ls dist/
+          cd dist/
           python3 -m pip install --upgrade pip
-          python3 -m pip install dist/mmw_python-0.1.0-py3-none-any.whl
+          python3 -m pip install mmw_python-0.1.0-py3-none-any.whl
 
       - name: Verify Python binding
         run: python3 -c "import mmw_python; print('Python binding imported successfully'); print('Available functions:', dir(mmw_python))"
