:construction_worker: add python dir to artifacts on build job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: mmw-build
-          path: build/
+          path: |
+            build/
+            python/
 
   smoke-test:
     runs-on: ubuntu-latest
