:construction_worker: ldfkgjaslkdfjg

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: mmw-build
-          path: 
+          path: |
             build/
             python/
       - name: Make binaries executable
@@ -60,7 +60,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: mmw-build
-          path:
+          path: |
             build/
             python/
       - name: Install Python build dependencies
