--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,16 +7,20 @@ on:
     branches: [ "**" ]
 
 jobs:
+
+  # Builds the C++ library
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Build project
         run: |
           mkdir build
           cd build
           cmake ../
           make
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -30,23 +34,28 @@ jobs:
           name: python-artifact
           path: python/
 
+  # Runs the sample applications
   smoke-test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v3
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: mmw-build
           path: build/
+
       - name: Download python directory
         uses: actions/download-artifact@v4
         with:
           name: python-artifact
           path: python/
+
       - name: Make binaries executable
         run: chmod +x build/broker build/subscribe build/publish
+
       - name: Run smoke tests
         run: |
           cd build
@@ -59,6 +68,7 @@ jobs:
           sleep 3
           kill $SUB_PID $BROKER_PID || true
 
+  # Build Python binding
   python-build:
     runs-on: ubuntu-latest
     needs: build
@@ -87,21 +97,13 @@ jobs:
         run: |
           python3 -m build .
 
-      # - name: Install wheel
-      #   run: |
-      #     cd dist/
-      #     python3 -m pip install --upgrade pip
-      #     python3 -m pip install mmw_python-0.1.0-py3-none-any.whl
-      
-      # - name: Verify Python binding
-      #   run: python3 -c "import mmw_python; print('Python binding imported successfully'); print('Available functions:', dir(mmw_python))"
-
       - name: Upload Python wheel
         uses: actions/upload-artifact@v4
         with:
           name: python-wheel
           path: dist/
 
+  # Install and import wheel
   python-test:
     runs-on: ubuntu-latest
     needs: python-build
