--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake ../ -DCEREAL_SERIALIZER
+          cmake ../ -DCEREAL_SERIALIZER=ON
           make
 
       - name: Upload build artifacts
