--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ FetchContent_MakeAvailable(spdlog)
 # Fetch pybind11
 set(PYBIND11_FINDPYTHON NEW CACHE STRING "")
 set(PYBIND11_PYTHON_VERSION 3.12 CACHE STRING "")
+set(_Python_EXECUTABLE_DEBUG "" CACHE FILEPATH "Suppress debug executable error")
 FetchContent_Declare(
     pybind11
     GIT_REPOSITORY https://github.com/pybind/pybind11.git
