:wrench: add conditions to build sample apps and broker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,23 @@
 cmake_minimum_required(VERSION 3.0)
 project(MiddlewareTest)
 
-# Use C++11 standard (compatible with older code)
+# Options to control building extras
+option(BUILD_BROKER "Build broker executable" ON)
+option(BUILD_SAMPLE_APPS "Build sample apps (publish/subscribe/etc)" ON)
+
+# Use C++11
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Get YAML CPP Library
+# Fetch dependencies (yaml-cpp, json, spdlog, pybind11, cereal)
 include(FetchContent)
+
 FetchContent_Declare(
   yaml-cpp
   GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
-  GIT_TAG 0.8.0 # Can be a tag (yaml-cpp-x.x.x), a commit hash, or a branch name (master)
+  GIT_TAG 0.8.0
 )
 FetchContent_MakeAvailable(yaml-cpp)
-
-# Get JSON library
-include(FetchContent)
 
 FetchContent_Declare(
   json
@@ -24,8 +26,6 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(json)
 
-# Get SPD Log Library
-include(FetchContent)
 FetchContent_Declare(
   spdlog
   GIT_REPOSITORY https://github.com/gabime/spdlog.git
@@ -33,18 +33,16 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(spdlog)
 
-# Fetch pybind11
 set(PYBIND11_FINDPYTHON NEW CACHE STRING "")
 set(PYBIND11_PYTHON_VERSION 3.12 CACHE STRING "")
 set(_Python_EXECUTABLE_DEBUG "" CACHE FILEPATH "Suppress debug executable error")
 FetchContent_Declare(
     pybind11
     GIT_REPOSITORY https://github.com/pybind/pybind11.git
-    GIT_TAG        v3.0.1
+    GIT_TAG v3.0.1
 )
 FetchContent_MakeAvailable(pybind11)
 
-# Fetch Cereal
 set(CEREAL_USE_BOOST OFF CACHE BOOL "" FORCE)
 FetchContent_Declare(
   cereal
@@ -53,20 +51,7 @@ FetchContent_Declare(
 )
 FetchContent_Populate(cereal)
 
-# Build the Python module
-pybind11_add_module(mmw_python python/Bindings.cpp)
-target_include_directories(mmw_python PRIVATE 
-    ${CMAKE_SOURCE_DIR}/ 
-    ${CMAKE_SOURCE_DIR}/includes/
-)
-target_link_libraries(mmw_python PRIVATE mmw)
-
-# Force output into the python/ folder
-set_target_properties(mmw_python PROPERTIES
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/python"
-)
-
-# Set the serializer
+# Serializer selection
 if(CEREAL_SERIALIZER)
     add_compile_definitions(CEREAL_SERIALIZER)
     set(SERIALIZER_SRC ${CMAKE_SOURCE_DIR}/src/serialization/CerealSerializer.cpp)
@@ -79,10 +64,7 @@ else()
     set(SERIALIZER_SRC ${CMAKE_SOURCE_DIR}/src/serialization/CerealSerializer.cpp)
 endif()
 
-# Add BUILD_SHARED_LIBS option
-option(BUILD_SHARED_LIBS "Build as shared library" ON)
-
-# Create the mw library
+# Build library
 add_library(
     mmw
     ${CMAKE_SOURCE_DIR}/src/MMW.cpp
@@ -91,68 +73,63 @@ add_library(
     ${SERIALIZER_SRC}
     ${CMAKE_SOURCE_DIR}/src/network/SocketAbstraction.cpp
 )
-
-# Create an alias target so other projects can do target_link_libraries(my_app PRIVATE mmw::mmw)
 add_library(mmw::mmw ALIAS mmw)
-
-# Export include directories for consumers
 target_include_directories(mmw PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/includes>
-    $<INSTALL_INTERFACE:include> # only relevant if installed later
+    $<INSTALL_INTERFACE:include>
 )
-
-# Link Libraries, only link ws2_32 if we're on Windows
+target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR} ${cereal_SOURCE_DIR}/include/)
 if(WIN32)
   target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only ws2_32)
-else(WIN32)
-  target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only)
-endif(WIN32)
+else()
+  target_link_libraries(mmw PUBLIC yaml-cpp::yaml-cpp nlohmann_json::nlohmann_json spdlog::spdlog_header_only pthread)
+endif()
 
-# Library includes
-# TODO: Should cereal includes be included conditionally?
-target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/ ${CMAKE_SOURCE_DIR}/includes/ ${cereal_SOURCE_DIR}/include/)
+# Build broker only if option is ON
+if(BUILD_BROKER)
+    add_executable(
+        broker ${CMAKE_SOURCE_DIR}/broker/Broker.cpp
+        ${CMAKE_SOURCE_DIR}/src/serialization/SerializerAbstraction.cpp
+        ${SERIALIZER_SRC}
+        ${CMAKE_SOURCE_DIR}/src/network/SocketAbstraction.cpp
+    )
+    target_include_directories(broker PRIVATE ${CMAKE_SOURCE_DIR}/includes/ ${cereal_SOURCE_DIR}/include/)
+    if(WIN32)
+      target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only ws2_32)
+    else()
+      target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only)
+    endif()
+endif()
 
-# Add executables
-add_executable(
-  broker ${CMAKE_SOURCE_DIR}/broker/Broker.cpp
-  ${CMAKE_SOURCE_DIR}/src/serialization/SerializerAbstraction.cpp
-  ${SERIALIZER_SRC}
-  ${CMAKE_SOURCE_DIR}/src/network/SocketAbstraction.cpp
-)
-add_executable(publish ${CMAKE_SOURCE_DIR}/app/Publish.cpp)
-add_executable(subscribe ${CMAKE_SOURCE_DIR}/app/Subscribe.cpp)
-add_executable(publish_c ${CMAKE_SOURCE_DIR}/app/Publish.c)
-add_executable(subscribe_c ${CMAKE_SOURCE_DIR}/app/Subscribe.c)
-add_executable(publish_raw ${CMAKE_SOURCE_DIR}/app/PublishRaw.cpp)
-add_executable(subscribe_raw ${CMAKE_SOURCE_DIR}/app/SubscribeRaw.cpp)
+# Build sample apps only if option is ON
+if(BUILD_SAMPLE_APPS)
+    add_executable(publish ${CMAKE_SOURCE_DIR}/app/Publish.cpp)
+    add_executable(subscribe ${CMAKE_SOURCE_DIR}/app/Subscribe.cpp)
+    add_executable(publish_c ${CMAKE_SOURCE_DIR}/app/Publish.c)
+    add_executable(subscribe_c ${CMAKE_SOURCE_DIR}/app/Subscribe.c)
+    add_executable(publish_raw ${CMAKE_SOURCE_DIR}/app/PublishRaw.cpp)
+    add_executable(subscribe_raw ${CMAKE_SOURCE_DIR}/app/SubscribeRaw.cpp)
 
-# Application includes
-target_include_directories(publish PRIVATE ${CMAKE_SOURCE_DIR}/)
-target_include_directories(subscribe PRIVATE ${CMAKE_SOURCE_DIR}/)
-target_include_directories(broker PRIVATE ${CMAKE_SOURCE_DIR}/includes/ ${cereal_SOURCE_DIR}/include/)
-target_include_directories(publish_c PRIVATE ${CMAKE_SOURCE_DIR}/)
-target_include_directories(subscribe_c PRIVATE ${CMAKE_SOURCE_DIR}/)
-target_include_directories(publish_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
-target_include_directories(subscribe_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
+    target_include_directories(publish PRIVATE ${CMAKE_SOURCE_DIR}/)
+    target_include_directories(subscribe PRIVATE ${CMAKE_SOURCE_DIR}/)
+    target_include_directories(publish_c PRIVATE ${CMAKE_SOURCE_DIR}/)
+    target_include_directories(subscribe_c PRIVATE ${CMAKE_SOURCE_DIR}/)
+    target_include_directories(publish_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
+    target_include_directories(subscribe_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
 
-# Link Libraries, only link ws2_32 if we're on Windows
-if(WIN32)
-  target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only ws2_32)
-else(WIN32)
-  target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only)
-endif(WIN32)
-target_link_libraries(publish PRIVATE mmw pthread)
-target_link_libraries(subscribe PRIVATE mmw pthread)
-target_link_libraries(publish_c PRIVATE mmw pthread)
-target_link_libraries(subscribe_c PRIVATE mmw pthread)
-target_link_libraries(publish_raw PRIVATE mmw pthread)
-target_link_libraries(subscribe_raw PRIVATE mmw pthread)
+    target_link_libraries(publish PRIVATE mmw pthread)
+    target_link_libraries(subscribe PRIVATE mmw pthread)
+    target_link_libraries(publish_c PRIVATE mmw pthread)
+    target_link_libraries(subscribe_c PRIVATE mmw pthread)
+    target_link_libraries(publish_raw PRIVATE mmw pthread)
+    target_link_libraries(subscribe_raw PRIVATE mmw pthread)
+endif()
 
-# Copy config to build directory for sample apps if it exists
+# Copy config if exists
 if(EXISTS "${CMAKE_SOURCE_DIR}/config/config.yml")
     file(COPY "${CMAKE_SOURCE_DIR}/config/config.yml" DESTINATION "${CMAKE_SOURCE_DIR}/build/")
 endif()
 
-# Copy Cereal's license into third party license folder
+# Copy Cereal license
 file(COPY ${cereal_SOURCE_DIR}/LICENSE DESTINATION ${CMAKE_SOURCE_DIR}/third_party_licenses/)
 file(RENAME ${CMAKE_SOURCE_DIR}/third_party_licenses/LICENSE ${CMAKE_SOURCE_DIR}/third_party_licenses/cereal_LICENSE.txt)
