--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,14 +58,14 @@ FetchContent_Populate(cereal)
 # Set the serializer
 if(CEREAL_SERIALIZER)
     add_compile_definitions(CEREAL_SERIALIZER)
-    set(SERIALIZER_SRC ${CMAKE_SOURCE_DIR}/src/serialization/CerealSerializer.cpp)
+    set(SERIALIZER_SRC ${CMAKE_CURRENT_LIST_DIR}/src/serialization/CerealSerializer.cpp)
 elseif(JSON_SERIALIZER)
     add_compile_definitions(JSON_SERIALIZER)
-    set(SERIALIZER_SRC ${CMAKE_SOURCE_DIR}/src/serialization/JsonSerializer.cpp)
+    set(SERIALIZER_SRC ${CMAKE_CURRENT_LIST_DIR}/src/serialization/JsonSerializer.cpp)
 else()
     message(WARNING "No serializer provided, using CEREAL_SERIALIZER by default")
     add_compile_definitions(CEREAL_SERIALIZER)
-    set(SERIALIZER_SRC ${CMAKE_SOURCE_DIR}/src/serialization/CerealSerializer.cpp)
+    set(SERIALIZER_SRC ${CMAKE_CURRENT_LIST_DIR}/src/serialization/CerealSerializer.cpp)
 endif()
 
 # Add BUILD_SHARED_LIBS option
@@ -74,11 +74,11 @@ option(BUILD_SHARED_LIBS "Build as shared library" ON)
 # Create the mw library
 add_library(
     mmw
-    ${CMAKE_SOURCE_DIR}/src/MMW.cpp
-    ${CMAKE_SOURCE_DIR}/src/ConfigFileParser.cpp
-    ${CMAKE_SOURCE_DIR}/src/serialization/SerializerAbstraction.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/MMW.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/ConfigFileParser.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/serialization/SerializerAbstraction.cpp
     ${SERIALIZER_SRC}
-    ${CMAKE_SOURCE_DIR}/src/network/SocketAbstraction.cpp
+    ${CMAKE_CURRENT_LIST_DIR}/src/network/SocketAbstraction.cpp
 )
 
 # Create an alias target
@@ -86,10 +86,10 @@ add_library(mmw::mmw ALIAS mmw)
 
 # Export include directories
 target_include_directories(mmw PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/includes>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/includes>
     $<INSTALL_INTERFACE:include>
 )
-target_include_directories(mmw PRIVATE ${CMAKE_SOURCE_DIR}/ ${CMAKE_SOURCE_DIR}/includes/ ${cereal_SOURCE_DIR}/include/)
+target_include_directories(mmw PRIVATE ${CMAKE_CURRENT_LIST_DIR}/ ${CMAKE_CURRENT_LIST_DIR}/includes/ ${cereal_SOURCE_DIR}/include/)
 
 # Link Libraries
 if(WIN32)
@@ -101,12 +101,12 @@ endif()
 # Build broker if requested
 if(BUILD_BROKER)
     add_executable(
-        broker ${CMAKE_SOURCE_DIR}/broker/Broker.cpp
-        ${CMAKE_SOURCE_DIR}/src/serialization/SerializerAbstraction.cpp
+        broker ${CMAKE_CURRENT_LIST_DIR}/broker/Broker.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/serialization/SerializerAbstraction.cpp
         ${SERIALIZER_SRC}
-        ${CMAKE_SOURCE_DIR}/src/network/SocketAbstraction.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/network/SocketAbstraction.cpp
     )
-    target_include_directories(broker PRIVATE ${CMAKE_SOURCE_DIR}/includes/ ${cereal_SOURCE_DIR}/include/)
+    target_include_directories(broker PRIVATE ${CMAKE_CURRENT_LIST_DIR}/includes/ ${cereal_SOURCE_DIR}/include/)
     if(WIN32)
         target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only ws2_32)
     else()
@@ -116,19 +116,19 @@ endif()
 
 # Build sample apps if requested
 if(BUILD_SAMPLE_APPS)
-    add_executable(publish ${CMAKE_SOURCE_DIR}/app/Publish.cpp)
-    add_executable(subscribe ${CMAKE_SOURCE_DIR}/app/Subscribe.cpp)
-    add_executable(publish_c ${CMAKE_SOURCE_DIR}/app/Publish.c)
-    add_executable(subscribe_c ${CMAKE_SOURCE_DIR}/app/Subscribe.c)
-    add_executable(publish_raw ${CMAKE_SOURCE_DIR}/app/PublishRaw.cpp)
-    add_executable(subscribe_raw ${CMAKE_SOURCE_DIR}/app/SubscribeRaw.cpp)
+    add_executable(publish ${CMAKE_CURRENT_LIST_DIR}/app/Publish.cpp)
+    add_executable(subscribe ${CMAKE_CURRENT_LIST_DIR}/app/Subscribe.cpp)
+    add_executable(publish_c ${CMAKE_CURRENT_LIST_DIR}/app/Publish.c)
+    add_executable(subscribe_c ${CMAKE_CURRENT_LIST_DIR}/app/Subscribe.c)
+    add_executable(publish_raw ${CMAKE_CURRENT_LIST_DIR}/app/PublishRaw.cpp)
+    add_executable(subscribe_raw ${CMAKE_CURRENT_LIST_DIR}/app/SubscribeRaw.cpp)
 
-    target_include_directories(publish PRIVATE ${CMAKE_SOURCE_DIR}/)
-    target_include_directories(subscribe PRIVATE ${CMAKE_SOURCE_DIR}/)
-    target_include_directories(publish_c PRIVATE ${CMAKE_SOURCE_DIR}/)
-    target_include_directories(subscribe_c PRIVATE ${CMAKE_SOURCE_DIR}/)
-    target_include_directories(publish_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
-    target_include_directories(subscribe_raw PRIVATE ${CMAKE_SOURCE_DIR}/)
+    target_include_directories(publish PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
+    target_include_directories(subscribe PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
+    target_include_directories(publish_c PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
+    target_include_directories(subscribe_c PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
+    target_include_directories(publish_raw PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
+    target_include_directories(subscribe_raw PRIVATE ${CMAKE_CURRENT_LIST_DIR}/)
 
     target_link_libraries(publish PRIVATE mmw pthread)
     target_link_libraries(subscribe PRIVATE mmw pthread)
@@ -138,8 +138,8 @@ if(BUILD_SAMPLE_APPS)
     target_link_libraries(subscribe_raw PRIVATE mmw pthread)
 
     # Copy config if it exists
-    if(EXISTS "${CMAKE_SOURCE_DIR}/config/config.yml")
-        file(COPY "${CMAKE_SOURCE_DIR}/config/config.yml" DESTINATION "${CMAKE_SOURCE_DIR}/build/")
+    if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/config/config.yml")
+        file(COPY "${CMAKE_CURRENT_LIST_DIR}/config/config.yml" DESTINATION "${CMAKE_CURRENT_LIST_DIR}/build/")
     endif()
 endif()
 
@@ -147,8 +147,8 @@ endif()
 if(BUILD_PYTHON_MODULE)
     pybind11_add_module(mmw_python python/Bindings.cpp)
     target_include_directories(mmw_python PRIVATE 
-        ${CMAKE_SOURCE_DIR}/ 
-        ${CMAKE_SOURCE_DIR}/includes/
+        ${CMAKE_CURRENT_LIST_DIR}/ 
+        ${CMAKE_CURRENT_LIST_DIR}/includes/
     )
     target_link_libraries(mmw_python PRIVATE mmw)
     set_target_properties(mmw_python PROPERTIES
@@ -157,5 +157,5 @@ if(BUILD_PYTHON_MODULE)
 endif()
 
 # Copy Cereal license
-file(COPY ${cereal_SOURCE_DIR}/LICENSE DESTINATION ${CMAKE_SOURCE_DIR}/third_party_licenses/)
-file(RENAME ${CMAKE_SOURCE_DIR}/third_party_licenses/LICENSE ${CMAKE_SOURCE_DIR}/third_party_licenses/cereal_LICENSE.txt)
+file(COPY ${cereal_SOURCE_DIR}/LICENSE DESTINATION ${CMAKE_CURRENT_LIST_DIR}/third_party_licenses/)
+file(RENAME ${CMAKE_CURRENT_LIST_DIR}/third_party_licenses/LICENSE ${CMAKE_CURRENT_LIST_DIR}/third_party_licenses/cereal_LICENSE.txt)
