--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,9 +99,11 @@ if(BUILD_BROKER)
     )
     target_include_directories(broker PRIVATE ${CMAKE_CURRENT_LIST_DIR}/includes/ ${cereal_SOURCE_DIR}/include/)
     if(WIN32)
-        target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only ws2_32)
+        find_package(unofficial-sqlite3 CONFIG REQUIRED)
+        target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only ws2_32 unofficial::sqlite3::sqlite3)
     else()
-        target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only)
+        find_package(SQLite3 REQUIRED)
+        target_link_libraries(broker nlohmann_json::nlohmann_json pthread spdlog::spdlog_header_only SQLite::SQLite3)
     endif()
 endif()
 
